--- a/lic.html
+++ b/lic.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">компания</a><div class="dropdown-menu"><a class="dropdown-item" href="lic.html">Лицензии</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">услуги</a><div class="dropdown-menu"><a class="dropdown-item" href="cayir.html" aria-expanded="false">САУиР</a><a class="dropdown-item" href="caykc.html" aria-expanded="false">САУ КЦ</a><a class="dropdown-item" href="cap.html" aria-expanded="false">САР</a><a class="dropdown-item" href="dmpc.html" aria-expanded="false">DMPC</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">наш опыт</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Примеры работ</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#contacts3-s">КОНТАКТЫ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link" href="index.html" aria-expanded="true">главная</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="true">компания</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">услуги</a><div class="dropdown-menu"><a class="dropdown-item" href="cayir.html" aria-expanded="false">САУиР</a><a class="dropdown-item" href="caykc.html" aria-expanded="false">САУ КЦ</a><a class="dropdown-item" href="cap.html" aria-expanded="false">САР</a><a class="dropdown-item" href="dmpc.html" aria-expanded="false">DMPC</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">наш опыт</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Примеры работ</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#contacts3-s">КОНТАКТЫ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-x" style="background-image: url(assets/images/mbr-1-2000x1334.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-x" style="background-image: url(assets/images/mbr-1-2000x1334.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
