--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link" href="index.html" aria-expanded="true">главная</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="true">компания</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">услуги</a><div class="dropdown-menu"><a class="dropdown-item" href="cayir.html" aria-expanded="false">САУиР</a><a class="dropdown-item" href="caykc.html" aria-expanded="false">САУ КЦ</a><a class="dropdown-item" href="cap.html" aria-expanded="false">САР</a><a class="dropdown-item" href="dmpc.html" aria-expanded="false">DMPC</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">наш опыт</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Примеры работ</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#contacts3-s">КОНТАКТЫ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">главная</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">компания</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">услуги</a><div class="dropdown-menu"><a class="dropdown-item" href="dmpc.html" aria-expanded="false">DMPC</a><a class="dropdown-item" href="cap.html" aria-expanded="false">САР</a><a class="dropdown-item" href="caykc.html" aria-expanded="false">САУ КЦ</a><a class="dropdown-item" href="cayir.html" aria-expanded="false">САУиР</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">наш опыт</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Примеры работ</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#contacts3-s">КОНТАКТЫ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-w" style="background-image: url(assets/images/head-bg-2000x649.png);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-w" style="background-image: url(assets/images/head-bg-2000x649.png);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -360,7 +360,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="GM0lInPp2mSbXBRtSPl4/WD4JAHbexmWPwrdICGu4RaHib4rMwLf1cvPyFRFR9AnZSJF0kvGaV1ywlaV8M1/9QpmhZ5y8JhQaLHAgG/bSgKquxSjwLYJt6I91t2YoNvS" data-form-email="true">
+                    <input type="hidden" value="vPcEgoxC3EsYI33nOGL9LUgSqaZ1jrAvfPHbWaK2/R9HH+HA2lyjGNGbGKOvzUm9noGVdZEgUm6IWRJgqpUxkIIP3vTi31KHsdifCMDpS81/U0W1V3fCyLBje4xA8IaB" data-form-email="true">
 
                     
 
