create github pages

--- a/caykc.html
+++ b/caykc.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">главная</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">компания</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">услуги</a><div class="dropdown-menu"><a class="dropdown-item" href="dmpc.html" aria-expanded="false">DMPC</a><a class="dropdown-item" href="cap.html" aria-expanded="false">САР</a><a class="dropdown-item" href="caykc.html" aria-expanded="false">САУ КЦ</a><a class="dropdown-item" href="cayir.html" aria-expanded="false">САУиР</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">наш опыт</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Примеры работ</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#contacts3-s">КОНТАКТЫ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">главная</a></li><li class="nav-item"><a class="nav-link link" href="company.html" aria-expanded="false">компания</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">услуги</a><div class="dropdown-menu"><a class="dropdown-item" href="cayir.html" aria-expanded="false">САУиР</a><a class="dropdown-item" href="cap.html" aria-expanded="false">САР</a><a class="dropdown-item" href="caykc.html" aria-expanded="false">САУ КЦ</a><a class="dropdown-item" href="dmpc.html" aria-expanded="false">DMPC</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">наш опыт</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Примеры работ</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#contacts3-s">КОНТАКТЫ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-14" data-bg-video="https://www.youtube.com/embed/JHRiaKEYeis?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-14" data-bg-video="https://www.youtube.com/embed/JHRiaKEYeis?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
 
@@ -67,8 +67,8 @@
             <div class="row">
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
-                    <h1 class="mbr-section-title display-1"><br><br>BARS ENGINEERING</h1>
-                    <p class="mbr-section-lead lead"><br>САУиР модели TMC/CL-001.04 &nbsp;для автоматизации технологических и вспомогательных объектов газоперекачивающего агрегата (ГПА)<br></p>
+                    <h1 class="mbr-section-title display-1"><br><br>Система автоматического управления компрессорными станциями</h1>
+                    <p class="mbr-section-lead lead"><br><br></p>
                     
                 </div>
             </div>
@@ -148,5 +148,6 @@
   
   
   <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
   </body>
 </html>
