--- a/dmpc.html
+++ b/dmpc.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">главная</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">компания</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">услуги</a><div class="dropdown-menu"><a class="dropdown-item" href="dmpc.html" aria-expanded="false">DMPC</a><a class="dropdown-item" href="cap.html" aria-expanded="false">САР</a><a class="dropdown-item" href="caykc.html" aria-expanded="false">САУ КЦ</a><a class="dropdown-item" href="cayir.html" aria-expanded="false">САУиР</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">наш опыт</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Примеры работ</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#contacts3-s">КОНТАКТЫ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">главная</a></li><li class="nav-item"><a class="nav-link link" href="company.html" aria-expanded="false">компания</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">услуги</a><div class="dropdown-menu"><a class="dropdown-item" href="cayir.html" aria-expanded="false">САУиР</a><a class="dropdown-item" href="cap.html" aria-expanded="false">САР</a><a class="dropdown-item" href="caykc.html" aria-expanded="false">САУ КЦ</a><a class="dropdown-item" href="dmpc.html" aria-expanded="false">DMPC</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">наш опыт</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Примеры работ</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#contacts3-s">КОНТАКТЫ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,9 +57,9 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-1o" data-bg-video="https://www.youtube.com/embed/E7O_IIuA-1A?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-1o" style="background-image: url(assets/images/-2000x1233.jpg);">
 
-    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(31, 6, 91);"></div>
+    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(15, 0, 51);"></div>
 
     <div class="mbr-table-cell">
 
@@ -67,8 +67,8 @@
             <div class="row">
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
-                    <h1 class="mbr-section-title display-1"><br><br>BARS ENGINEERING</h1>
-                    <p class="mbr-section-lead lead"><br>Система Data Mining Process Control (DMPC) использует современные, уникальные методы математического моделирования и оптимизации для решения задач улучшения эффективности непрерывных процессов, повышения производительности и срока службы установленного оборудования.<br></p>
+                    <h1 class="mbr-section-title display-1"><br><br>Оптимизация процессов для повышения производительности оборудования</h1>
+                    <p class="mbr-section-lead lead"><br><br></p>
                     
                 </div>
             </div>
@@ -105,7 +105,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-1r" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-1r" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -142,11 +142,11 @@
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
   <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
   </body>
 </html>
