--- a/lic.html
+++ b/lic.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-x" style="background-image: url(assets/images/mbr-1-2000x1334.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-x" style="background-image: url(assets/images/mbr-1-2000x1334.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
