--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(21, 11, 45);"></div>
 
@@ -81,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section" id="content8-26" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section" id="content8-26" style="background-color: rgb(239, 239, 239); padding-top: 40px; padding-bottom: 40px;">
 
     
 
@@ -276,7 +276,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="OplFO17EBboTAvpVuM4+5ZtBgOIk6ehoeWUn/9dMkcRIKCHGBHBrsA2epGf/bWe2z922n+MVWiv+ahR9MbUwP8SJDAEfA5pfVesKs6bcmrDCujWexcY82pBNr0FbPfvl" data-form-email="true">
+                    <input type="hidden" value="bz6/o32gnHOUXyJoiv9bQMhTVlub4Kj6SMMo/YY/ZXiaU/bQgB8NQxiBEFfjMNEHxqWcsZJykp10fSbicfaQdGUOJlSu1tNvA58Dbri2QsezeMsQuJeNpGHBncAGXrbQ" data-form-email="true">
 
                     
 
