--- a/dmpc.html
+++ b/dmpc.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-1o" style="background-image: url(assets/images/-2000x1233.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-1o" style="background-image: url(assets/images/-2000x1233.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(15, 0, 51);"></div>
 
