--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(21, 11, 45);"></div>
 
@@ -81,13 +81,12 @@
 
 </section>
 
-<section class="mbr-section" id="content8-26" style="background-color: rgb(239, 239, 239); padding-top: 40px; padding-bottom: 40px;">
-
-    
+<section class="mbr-section article mbr-section__container" id="content1-27" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
 
     <div class="container">
-        <h3 class="mbr-section-title display-2"></h3>
-        <div class="lead"><p><strong>ТОО Барс Инжиниринг предлагает интегрированные системы управления и оптимизации для всех видов производств, в том числе относящихся к особо опасным:</strong></p><p><span style="line-height: 1.5;">- нефтегазодобывающие предприятия;</span></p><p><span style="line-height: 1.5;">- предприятия, осуществляющих транспорт нефти и газа по трубопроводным системам.</span></p><p>- нефтеперерабатывающие производства;&nbsp;</p><p>- химические предприятия;</p><p>- пищевые производства.</p></div>
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong>ТОО Барс Инжиниринг предлагает интегрированные системы управления и оптимизации для всех видов производств, в том числе относящихся к особо опасным:</strong></p><p><br></p><p>- нефтегазодобывающие предприятия;</p><p><br></p><p>- предприятия, осуществляющих транспорт нефти и газа по трубопроводным системам.</p><p><br></p><p>- нефтеперерабатывающие производства;&nbsp;</p><p><br></p><p>- химические предприятия;</p><p><br></p><p>- пищевые производства.</p></div>
+        </div>
     </div>
 
 </section>
@@ -276,7 +275,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="bz6/o32gnHOUXyJoiv9bQMhTVlub4Kj6SMMo/YY/ZXiaU/bQgB8NQxiBEFfjMNEHxqWcsZJykp10fSbicfaQdGUOJlSu1tNvA58Dbri2QsezeMsQuJeNpGHBncAGXrbQ" data-form-email="true">
+                    <input type="hidden" value="EBWvE/JjIcAefY/YyZfMb47ZW3Fuv4AEnxNpihrWcA6UH3oigQab5lBSa1x0CYN4IkwiZh709DwH3pPB5ctAARwUBkEkEpVw2D4uj1RI7o8eVAGtQERY7QCMXK8k64iD" data-form-email="true">
 
                     
 
