--- a/dmpc.html
+++ b/dmpc.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-1o" style="background-image: url(assets/images/-2000x1233.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-1o" style="background-image: url(assets/images/-2000x1233.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(15, 0, 51);"></div>
 
@@ -127,7 +127,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1n" style="background-color: rgb(19, 8, 38); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1n" style="background-color: rgb(6, 6, 27); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center">Сделано web-студией&nbsp;<strong>Amadeus</strong></p>
