--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(21, 11, 45);"></div>
 
@@ -231,7 +231,7 @@
     </div>
 </section>
 
-<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-s" style="background-color: rgb(8, 3, 19); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-s" style="background-color: rgb(10, 8, 38); padding-top: 90px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -275,7 +275,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="EBWvE/JjIcAefY/YyZfMb47ZW3Fuv4AEnxNpihrWcA6UH3oigQab5lBSa1x0CYN4IkwiZh709DwH3pPB5ctAARwUBkEkEpVw2D4uj1RI7o8eVAGtQERY7QCMXK8k64iD" data-form-email="true">
+                    <input type="hidden" value="fYb8KswUVSk7C03e1jUJp1zKmmcOYpopA3IKmn9zdJ8Sj9gtBBKJD7P7y1BVbsd0VuspHggIBGRmSFlTrBozFRU09Xemyjnepqa8rJ6hZ186VNOCim4t56AHhHHESc8Z" data-form-email="true">
 
                     
 
@@ -299,7 +299,7 @@
         </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-i" style="background-color: rgb(19, 8, 38); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-i" style="background-color: rgb(6, 6, 27); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center">Сделано web-студией&nbsp;<strong>Amadeus</strong></p>
