create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-w" data-bg-video="https://www.youtube.com/embed/E4ps3M1uXhM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(21, 11, 45);"></div>
 
@@ -246,15 +246,15 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
                             <span class="list-group-icon"><span class="etl-icon icon-phone mbr-iconfont-company-contacts3"></span></span>
-                            <span class="list-group-text">+7(777)7777777</span>
+                            <span class="list-group-text">+7(701)714-19-29,</span>
                         </li>
                         <li class="list-group-item">
                             <span class="list-group-icon"><span class="etl-icon icon-map-pin mbr-iconfont-company-contacts3"></span></span>
-                            <span class="list-group-text">+77273945632</span>
+                            <span class="list-group-text">+7(727)274-73-98</span>
                         </li>
                         <li class="list-group-item active">
                             <span class="list-group-icon"><span class="etl-icon icon-envelope mbr-iconfont-company-contacts3"></span></span>
-                            <span class="list-group-text"><a href="mailto:support@mobirise.com">support@</a>mail.ru</span>
+                            <span class="list-group-text">ccckz@mail.ru<br></span>
                         </li>
                     </ul>
                 </div>
@@ -265,7 +265,7 @@
                 <ul><p><br></p><li><a class="text-white" href="#">К</a>омпания</li><li><a class="text-white" href="#">Н</a>аш опыт</li><li><a class="text-white" href="#">У</a>слуги</li><br><p></p></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
-                <p><strong>Contacts</strong><br>Email: support@mobirise.com<br>Phone: +1 (0) 000 0000 001<br>Fax: +1 (0) 000 0000 002<br><br><strong>Address</strong><br>1234 Street Name<br>City, AA 99999</p>
+                <p><strong>Contacts</strong><br><br><br>Тел./факс: +7(727)274-73-98, <br>274-71-95,<br><br>Моб.: +7(701)714-19-29,<br>+7(777)002-00-49<br><br>Эл. почта: ccckz@mail.ru<br><br><br><strong>Address</strong><br>050057, Республика Казахстан,               г. Алматы, ул. М. Озтюрка, д.11а<br></p>
             </div>
             <div class="col-xs-12 col-md-6 col-lg-3" data-form-type="formoid">
 
@@ -275,7 +275,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="fYb8KswUVSk7C03e1jUJp1zKmmcOYpopA3IKmn9zdJ8Sj9gtBBKJD7P7y1BVbsd0VuspHggIBGRmSFlTrBozFRU09Xemyjnepqa8rJ6hZ186VNOCim4t56AHhHHESc8Z" data-form-email="true">
+                    <input type="hidden" value="sdnlaTlqqQrun44CtAZdzmAPH+JeuQ+IbwStodudLZeY60/jEUzq6+lmck6fUukhVDYm+rZWS30iWqMQaCcpefBKvViB6qD8vKSUiGqFdtFKKH6HWv/fJUOR3lADftC7" data-form-email="true">
 
                     
 
